triying to solve iconSize layers on ios

--- a/src/App.css
+++ b/src/App.css
@@ -135,7 +135,7 @@
   }
 }
 @media screen and (max-width: 750px){
-  .mapboxgl-layer.icon.icon-size {
+  .iconMap{
       width: 20px;
   }
 }
